feat: refactor frequency set